--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <h1>Study Timer</h1>
         <div id="timer-display">25:00</div>
         <div class="buttons">
-            <button id="start-btn">Start</button>
+            <button id="strt-btn">Start</button>
             <button id="pause-btn">Pause</button>
-            <button id="stop-btn">Stop</button>
+            <button id="reset-btn">Reset</button>
+            <p id="time-to-focus">Time to Focus!</p>
         </div>
     </div>
 
